Tela dados usuario integrada ao banco

--- a/app/src/main/res/layout/fragment_enderecocadastro.xml
+++ b/app/src/main/res/layout/fragment_enderecocadastro.xml
@@ -36,7 +36,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView79"
+            android:id="@+id/txtvDadoslogin"
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:gravity="left|center_vertical"
