--- a/app/src/main/res/layout/fragment_conta.xml
+++ b/app/src/main/res/layout/fragment_conta.xml
@@ -16,13 +16,14 @@
         android:paddingRight="10dp">
 
         <TextView
+            android:id="@+id/txtDadosusuario"
             android:layout_width="match_parent"
-            android:layout_height="66dp"
+            android:layout_height="70dp"
             android:gravity="left|center_vertical"
             android:text="Bem vindo de volta, usuario " />
 
         <TextView
-            android:id="@+id/textView79"
+            android:id="@+id/txtvDadoslogin"
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:gravity="left|center_vertical"
@@ -48,7 +49,6 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView12"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:drawableBottom="@color/black"
@@ -57,13 +57,12 @@
                     android:text="Geral" />
 
                 <TextView
-                    android:id="@+id/textView18"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black25" />
 
                 <TextView
-                    android:id="@+id/textView16"
+                    android:id="@+id/txtvDadospessoais"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="left|center_vertical"
@@ -72,13 +71,12 @@
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView29"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView15"
+                    android:id="@+id/txtvMeusenderecos"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="left|center_vertical"
@@ -87,13 +85,12 @@
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView30"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView14"
+                    android:id="@+id/txtvMeuspedidos"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="left|center_vertical"
@@ -102,13 +99,11 @@
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView31"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView13"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:gravity="left|center_vertical"
@@ -116,13 +111,12 @@
                     android:text="Legal" />
 
                 <TextView
-                    android:id="@+id/textView32"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black25" />
 
                 <TextView
-                    android:id="@+id/textView24"
+                    android:id="@+id/txtvCondicoesdeuso"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="left|center_vertical"
@@ -131,13 +125,12 @@
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView33"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView25"
+                    android:id="@+id/txtvPoliticasprivacidade"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="left|center_vertical"
@@ -146,13 +139,12 @@
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView34"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView83"
+                    android:id="@+id/txtvSobre"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="left|center_vertical"
@@ -161,13 +153,11 @@
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/textView84"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black25" />
 
                 <TextView
-                    android:id="@+id/textView26"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
                     android:gravity="left|center_vertical"
@@ -175,22 +165,23 @@
                     android:text="Personal" />
 
                 <TextView
-                    android:id="@+id/textView35"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/black25" />
 
                 <TextView
-                    android:id="@+id/textView27"
+                    android:id="@+id/txtvSair"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:gravity="left|center_vertical"
                     android:paddingLeft="20dp"
                     android:text="Sair"
                     android:textColor="@color/black" />
-
             </LinearLayout>
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
         </LinearLayout>
     </ScrollView>
 
