--- a/app/src/main/res/layout/fragment_usuariopedido.xml
+++ b/app/src/main/res/layout/fragment_usuariopedido.xml
@@ -21,7 +21,7 @@
             android:text="Meus Pedidos" />
 
         <TextView
-            android:id="@+id/textView79"
+            android:id="@+id/txtvDadoslogin"
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:gravity="bottom|left"
