--- a/PrjMobileTCC/app/src/main/res/layout/fragment_pedidodetalhes.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_pedidodetalhes.xml
@@ -253,6 +253,7 @@
                 android:id="@+id/cntnrProduto"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/borda10"
                 android:orientation="horizontal"
                 android:paddingLeft="20dp"
