--- a/PrjMobileTCC/app/src/main/res/layout/fragment_carrinho.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_carrinho.xml
@@ -50,7 +50,7 @@
                     android:textStyle="bold" />
 
                 <ImageButton
-                    android:id="@+id/imageButton3"
+                    android:id="@+id/btnLimparcarrinho"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="bottom|right"
@@ -69,7 +69,7 @@
                 android:id="@+id/lytCntnrcarrinho"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -79,7 +79,8 @@
                     android:paddingLeft="20dp"
                     android:paddingTop="10dp"
                     android:paddingRight="20dp"
-                    android:paddingBottom="10dp">
+                    android:paddingBottom="10dp"
+                    android:visibility="visible">
 
                     <LinearLayout
                         android:layout_width="300dp"
