--- a/PrjMobileTCC/app/src/main/res/layout/fragment_login.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_login.xml
@@ -78,7 +78,8 @@
                     android:hint="Escreva sua senha"
                     android:inputType="textPersonName"
                     android:paddingLeft="20dp"
-                    android:paddingRight="20dp" />
+                    android:paddingRight="20dp"
+                    android:password="true" />
 
                 <Button
                     android:id="@+id/btnAcessarconta"
