--- a/PrjMobileTCC/app/src/main/res/layout/fragment_carrinho.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_carrinho.xml
@@ -60,7 +60,7 @@
             </FrameLayout>
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/txtvNumitemscar"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:text="X items" />
@@ -80,7 +80,7 @@
                     android:paddingTop="10dp"
                     android:paddingRight="20dp"
                     android:paddingBottom="10dp"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="300dp"
