--- a/PrjMobileTCC/app/src/main/res/layout/fragment_checkendereco.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_checkendereco.xml
@@ -100,7 +100,8 @@
                     android:background="@drawable/borda10"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="20dp">
+                    android:padding="20dp"
+                    android:visibility="visible">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -188,7 +189,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/lytCktresumo"
+                android:id="@+id/lytCktresumo3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
