--- a/PrjMobileTCC/app/src/main/res/layout/fragment_login.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_login.xml
@@ -57,7 +57,7 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Escreva seu e-mail"
-                    android:inputType="textPersonName"
+                    android:inputType="textEmailAddress"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
 
@@ -76,7 +76,7 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Escreva sua senha"
-                    android:inputType="textPersonName"
+                    android:inputType="textPassword"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
                     android:password="true" />
