--- a/PrjMobileTCC/app/src/main/res/layout/fragment_usuariodados.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_usuariodados.xml
@@ -17,13 +17,17 @@
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:gravity="center"
-            android:text="Meus Endereços" />
+            android:text="Meus Endereços"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:gravity="bottom|left"
-            android:text="Seus dados" />
+            android:text="Seus dados"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -93,33 +97,6 @@
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
                     android:text="cpfcliente"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="40dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:text="Usuario"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/txtvClienteusuario"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/bordaplaintxt"
-                    android:ems="10"
-                    android:gravity="left|center_vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="ususariocliente"
                     android:textSize="20sp" />
 
             </LinearLayout>
