--- a/PrjMobileTCC/app/src/main/res/layout/fragment_enderecocadastro.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_enderecocadastro.xml
@@ -76,7 +76,8 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Ex: 12345-123"
-                    android:inputType="textPersonName"
+                    android:inputType="numberSigned"
+                    android:maxLength="8"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
@@ -201,7 +202,8 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Ex: 1234"
-                    android:inputType="textPersonName"
+                    android:inputType="numberSigned"
+                    android:maxLength="10"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
