--- a/PrjMobileTCC/app/src/main/res/layout/fragment_detalhes.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_detalhes.xml
@@ -34,7 +34,8 @@
                     android:background="@drawable/gradblack_transparent2"
                     android:text="&lt;"
                     android:textColor="@color/white"
-                    android:textSize="34sp" />
+                    android:textSize="34sp"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/btnSlidedireita"
@@ -44,7 +45,8 @@
                     android:background="@drawable/gradblack_transparent1"
                     android:text="&gt;"
                     android:textColor="@color/white"
-                    android:textSize="34sp" />
+                    android:textSize="34sp"
+                    android:visibility="gone" />
 
             </FrameLayout>
 
@@ -57,75 +59,119 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="200dp">
 
-                <LinearLayout
+                <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:layout_height="match_parent">
 
-                    <android.support.v7.widget.CardView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="5dp"
-                        android:layout_weight="1"
-                        app:cardCornerRadius="15dp">
+                        android:orientation="vertical">
 
-                        <ImageView
-                            android:id="@+id/imgvCaixa1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="center"
-                            tools:src="@tools:sample/avatars" />
-                    </android.support.v7.widget.CardView>
+                        <LinearLayout
+                            android:id="@+id/lytCntnrbcimg"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:padding="10dp">
 
-                    <android.support.v7.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_weight="1"
-                        app:cardCornerRadius="15dp">
+                            <android.support.v7.widget.CardView
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="15dp">
 
-                        <ImageView
-                            android:id="@+id/imgvCaixa2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="center"
-                            tools:src="@tools:sample/avatars" />
-                    </android.support.v7.widget.CardView>
+                                <ImageView
+                                    android:id="@+id/imgvCaixa1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:scaleType="fitCenter"
+                                    tools:src="@tools:sample/avatars" />
+                            </android.support.v7.widget.CardView>
 
-                    <android.support.v7.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_weight="1"
-                        app:cardCornerRadius="15dp">
+                            <android.support.v7.widget.CardView
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="15dp">
 
-                        <ImageView
-                            android:id="@+id/imgvCaixa3"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="center"
-                            tools:src="@tools:sample/avatars" />
-                    </android.support.v7.widget.CardView>
+                                <ImageView
+                                    android:id="@+id/imgvCaixa2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:scaleType="fitCenter"
+                                    tools:src="@tools:sample/avatars" />
+                            </android.support.v7.widget.CardView>
 
-                    <android.support.v7.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="5dp"
-                        android:layout_weight="1"
-                        app:cardCornerRadius="15dp">
+                            <android.support.v7.widget.CardView
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="15dp">
 
-                        <ImageView
-                            android:id="@+id/imgvCaixa4"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="center"
-                            tools:src="@tools:sample/avatars" />
-                    </android.support.v7.widget.CardView>
+                                <ImageView
+                                    android:id="@+id/imgvCaixa2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:scaleType="fitCenter"
+                                    tools:src="@tools:sample/avatars" />
+                            </android.support.v7.widget.CardView>
 
-                </LinearLayout>
+                            <android.support.v7.widget.CardView
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="15dp">
+
+                                <ImageView
+                                    android:id="@+id/imgvCaixa2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:scaleType="fitCenter"
+                                    tools:src="@tools:sample/avatars" />
+                            </android.support.v7.widget.CardView>
+
+                            <android.support.v7.widget.CardView
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="15dp">
+
+                                <ImageView
+                                    android:id="@+id/imgvCaixa3"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:scaleType="fitCenter"
+                                    tools:src="@tools:sample/avatars" />
+                            </android.support.v7.widget.CardView>
+
+                            <android.support.v7.widget.CardView
+                                android:layout_width="75dp"
+                                android:layout_height="75dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_weight="1"
+                                app:cardCornerRadius="15dp">
+
+                                <ImageView
+                                    android:id="@+id/imgvCaixa4"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:scaleType="fitCenter"
+                                    tools:src="@tools:sample/avatars" />
+                            </android.support.v7.widget.CardView>
+
+                        </LinearLayout>
+                    </LinearLayout>
+                </HorizontalScrollView>
 
                 <TextView
                     android:id="@+id/txtvNome"
